# deus_test

./: .env.test.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  techincal_task.md
.github/workflows/: tests.yml
docs/: index.md  structure.md
pydeus/: __init__.py
pydeus/api/: _base.py  search_category.py  timetable_category.py
pydeus/client/: __init__.py  abc.py  client.py
pydeus/client/authentication/: __init__.py  abc.py  auth.py
pydeus/errors/http/: errors.py
pydeus/http/: abc.py  api.py
pydeus/types/: __init__.py  _validators.py  base.py  credentials.py  event.py  person.py  search.py  sort.py  urls.py
pydeus/types/_converter/: __init__.py  abc.py  event_attendances_converter.py  event_converter.py  learn_profile_converter.py  module_converter.py  person_converter.py  room_converter.py  specialties_converter.py  training_team_converter.py
pydeus/types/app_config/: __init__.py  config.py
pydeus/types/requests/: base_request.py  event.py  search.py
pydeus/types/requests/authentication/: __init__.py  adfs.py  commonauth.py  oauth2.py
pydeus/types/responses/: __init__.py  attendances.py  base.py  event.py  learn_profile.py  lessons.py  module.py  person.py  room.py  specialties.py  training_team.py
tests/: README.md  _test_utils.py  conftest.py  test_client.py  test_models.py  test_search_category.py  test_timetable_category.py
tests/fixtures/: client.py  credentials.py  responses.py
tests/fixtures/response_generators/: event_generator.py  search_generator.py
